--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#A17917</color>
+    <color name="colorPrimary">#D9B611</color>
+    <color name="colorAccent">#F5D76E</color>
+    <color name="buttonColor">#E08A1E</color>
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
 </resources>
