--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -11,7 +11,10 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/home_search" />
+        android:id="@+id/text_cari"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
