--- a/app/src/main/res/layout/frag_kelola.xml
+++ b/app/src/main/res/layout/frag_kelola.xml
@@ -12,12 +12,17 @@
         android:id="@+id/button_daftar"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/white"
+        />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
         android:layout_below="@+id/button_daftar"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+
+        android:layout_marginTop="10dp" />
 </RelativeLayout>
