--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -9,16 +9,27 @@
         android:background="@drawable/dummy_cover"
         >
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/img_avatar"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/dummy_avatar"
-            android:background="@color/white"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:id="@+id/relativeLayout"
             android:layout_centerVertical="true"
-            android:scaleType="centerCrop"
-            android:layout_marginLeft="16dp" />
+            android:padding="1dp"
+            android:background="@color/white"
+            >
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/img_avatar"
+                android:src="@drawable/dummy_avatar"
+                android:background="@color/white"
+                android:scaleType="centerCrop"
+
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,19 +39,73 @@
             android:id="@+id/text_name"
             android:textColor="@color/white"
             android:textStyle="bold|italic"
-            android:layout_alignBottom="@+id/img_avatar"
-            android:layout_centerHorizontal="true" />
+            android:layout_marginLeft="10dp"
+            android:layout_alignBottom="@+id/relativeLayout"
+            android:layout_toEndOf="@+id/relativeLayout" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout2"
+        android:foregroundGravity="center_vertical|center_horizontal"
+        android:layout_below="@+id/header_profile"
+        android:layout_alignStart="@+id/scrollView"
+        android:layout_alignEnd="@+id/scrollView"
+        android:textAlignment="center"
+        >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="LANGGANAN"
+            android:id="@+id/button"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:background="@color/colorPrimary"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:layout_margin="5dp"
+            android:textColor="@color/white"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="BUKA PETA"
+            android:id="@+id/b_bukaPeta"
+            android:background="@color/colorPrimary"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="4.5"
+            android:id="@+id/textView3"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/b_bukaPeta"
+            android:textColor="@color/colorPrimary"
+            android:textSize="27dp" />
+
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
-        android:layout_below="@+id/header_profile"
-        android:layout_alignParentStart="true"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_marginRight="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/relativeLayout2">
 
         <RelativeLayout
             android:layout_width="match_parent"
