--- a/app/src/main/res/drawable/bunder.xml
+++ b/app/src/main/res/drawable/bunder.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorPrimary" />
-    <corners android:radius="90dp"></corners>
+    <corners android:radius="10dp"></corners>
+    <size android:height="10dp"/>
+
 </shape>
