--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,8 +7,28 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.dalbo.jajanon.MainActivity"
     tools:showIn="@layout/app_bar_main"
-    android:id="@+id/main_fragment"
+    android:id="@+id/home_view"
     >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header_profile"
+        android:layout_centerHorizontal="true">
 
+        <android.support.v4.view.ViewPager
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/home_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" >
+
+            <android.support.v4.view.PagerTabStrip
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/view2"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white" />
+        </android.support.v4.view.ViewPager>
+    </RelativeLayout>
 
 </RelativeLayout>
