--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/colorPrimary"
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:padding="1dp"
+        android:id="@+id/rlavatar"
         >
 
         <ImageView
@@ -23,20 +24,36 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/dummy_avatar"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+
+            />
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-    <TextView
-        android:id="@+id/textView"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/rlavatar"
+        android:layout_toEndOf="@+id/rlavatar"
+        android:layout_alignBottom="@+id/rlavatar"
+        android:padding="10dp"
+        >
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Alkaaf"
+
+            android:layout_above="@+id/email"
+            android:layout_alignStart="@+id/email"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="alfa.alkaaf@gmail.com"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+
+</RelativeLayout>
