--- a/app/src/main/res/layout/n_home_listrowview.xml
+++ b/app/src/main/res/layout/n_home_listrowview.xml
@@ -41,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Alamat"
-            android:layout_above="@+id/jarak"
-            android:layout_below="@+id/judul" />
+            android:layout_below="@+id/ratingBar"
+            android:layout_alignStart="@+id/jarak" />
 
         <TextView
             android:id="@+id/jarak"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:text="0.5 KM"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/alamat"
             android:layout_alignParentStart="true" />
 
         <TextView
@@ -61,6 +61,15 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:textSize="10dp" />
+
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBar"
+            android:layout_below="@+id/judul"
+            android:layout_alignStart="@+id/alamat"
+            style="?android:attr/ratingBarStyleSmall"
+            />
     </RelativeLayout>
 
 </RelativeLayout>
