--- a/app/src/main/res/layout/n_lapak_ulasan.xml
+++ b/app/src/main/res/layout/n_lapak_ulasan.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+android:layout_width="match_parent" android:layout_height="match_parent"
+    android:padding="16dp">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:text="Tambah ulasan"
+        android:id="@+id/tambah_ulasan"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/bunder"
+        android:textSize="10dp"
+        android:textColor="@color/white"
+        />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ulasan_list"
+        android:layout_below="@+id/tambah_ulasan"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp" />
 </RelativeLayout>
