--- a/app/src/main/res/layout/popup_login.xml
+++ b/app/src/main/res/layout/popup_login.xml
@@ -2,65 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:layout_margin="16dp"
     android:background="@drawable/shape_rect"
+    android:layout_marginTop="20dp"
     >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="Masuk"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:text="Email" />
-
     <EditText
-        android:id="@+id/editText2"
+        android:layout_marginTop="8dp"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView4"
         android:ems="10"
-        android:inputType="textEmailAddress" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/editText2"
-        android:text="Password" />
+        android:inputType="textEmailAddress"
+        android:hint="Email" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:layout_marginTop="8dp"
+        android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView5"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:layout_below="@+id/email"
+        android:hint="Password" />
 
     <Button
-        android:id="@+id/button3"
+        android:layout_marginTop="8dp"
+        android:id="@+id/submit"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/password"
         android:background="@drawable/button_rect"
-        android:text="New Button"
+        android:text="MASUK"
         android:textColor="@color/white" />
 
     <TextView
@@ -69,7 +47,8 @@
         android:layout_height="wrap_content"
 
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/button3"
-        android:text="Daftar disini untuk membuka fitur tambahan" />
+        android:layout_below="@+id/submit"
+        android:text="Daftar disini untuk membuka fitur tambahan"
+        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
