--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,5 +26,9 @@
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout"
             android:title="Logout" />
+        <item
+            android:id="@+id/nav_login"
+            android:icon="@drawable/ic_logout"
+            android:title="Login" />
     </group>
 </menu>
