--- a/app/src/main/res/layout/popup_daftar.xml
+++ b/app/src/main/res/layout/popup_daftar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:padding="16dp"
     android:background="@drawable/shape_rect">
 
     <EditText
@@ -77,14 +77,5 @@
         android:background="@drawable/button_rect"
         android:text="DAFTAR"
         android:textColor="@color/white" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sudah punya akun? Masuk disini"
-        android:id="@+id/login"
-        android:layout_below="@+id/submit"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
