--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,5 +30,10 @@
             android:id="@+id/nav_login"
             android:icon="@drawable/ic_logout"
             android:title="Login" />
+        <item
+            android:id="@+id/nav_register"
+            android:icon="@drawable/ic_register"
+            android:title="Register"
+            />
     </group>
 </menu>
