--- a/app/src/main/res/layout/n_lapak_ulasan_listview.xml
+++ b/app/src/main/res/layout/n_lapak_ulasan_listview.xml
@@ -16,11 +16,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/img_avatar"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
+            android:src="@drawable/dummy_avatar"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/dummy_avatar" />
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -56,7 +54,6 @@
             android:layout_height="wrap_content"
             android:text="&quot;Wenaak gaaan. harga bintang lima asli&quot;"
             android:id="@+id/ulasan"
-            android:textStyle="italic"
             android:layout_below="@+id/ulasan_rating"
             android:layout_alignParentStart="true"
             android:layout_marginTop="6.5dp" />
