--- a/app/src/main/res/layout/n_lapak_ulasan.xml
+++ b/app/src/main/res/layout/n_lapak_ulasan.xml
@@ -7,7 +7,7 @@ android:layout_width="match_parent" android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:text="Tambah ulasan"
-        android:id="@+id/tambah_ulasan"
+        android:id="@+id/addUlasan"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -20,7 +20,7 @@ android:layout_width="match_parent" android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ulasan_list"
-        android:layout_below="@+id/tambah_ulasan"
+        android:layout_below="@+id/addUlasan"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp" />
 </RelativeLayout>
