--- a/app/src/main/res/layout/n_lapak_overview.xml
+++ b/app/src/main/res/layout/n_lapak_overview.xml
@@ -106,106 +106,81 @@
 
 
             <RelativeLayout
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="16dp"
-                android:id="@+id/relativeLayout9">
+                android:id="@+id/relativeLayout9"
+                android:layout_margin="16dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Penjual:"
                     android:id="@+id/textView3"
-                    android:layout_margin="5dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_marginTop="8dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Alamat:"
                     android:id="@+id/textView7"
-                    android:layout_below="@+id/textView3"
+                    android:layout_below="@+id/penjual"
                     android:layout_alignParentStart="true"
-                    android:layout_margin="5dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Hari Buka:"
-                    android:id="@+id/textView8"
-                    android:layout_below="@+id/textView7"
-                    android:layout_margin="5dp"
-                    android:layout_alignParentEnd="true"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_marginTop="8dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Jam Buka:"
                     android:id="@+id/textView9"
-                    android:layout_below="@+id/textView8"
                     android:layout_alignParentStart="true"
-                    android:layout_margin="5dp"
                     android:layout_alignParentEnd="true"
-                    android:textStyle="bold" />
-            </RelativeLayout>
+                    android:textStyle="bold"
+                    android:layout_below="@+id/alamat"
+                    android:layout_marginTop="8dp" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/relativeLayout9"
-                android:id="@+id/relativeLayout10"
-                android:layout_marginRight="16dp">
 
                 <TextView
-                    android:layout_margin="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cak Sudar"
                     android:id="@+id/penjual"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="8dp" />
 
                 <TextView
-                    android:layout_margin="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Jalan Bisa Saja"
                     android:id="@+id/alamat"
                     android:layout_below="@+id/penjual"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true" />
-
-                <TextView
-                    android:layout_margin="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Senin - Kamis"
-                    android:id="@+id/haribuka"
-                    android:layout_below="@+id/alamat"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="8dp" />
 
                 <TextView
-                    android:layout_margin="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="15.00 - 2100"
                     android:id="@+id/jambuka"
-                    android:layout_below="@+id/haribuka"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/alamat"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="8dp" />
 
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/relativeLayout10"
+                android:layout_below="@id/relativeLayout9"
                 android:layout_centerHorizontal="true"
                 >
 
