--- a/app/src/main/res/layout/popup_daftar.xml
+++ b/app/src/main/res/layout/popup_daftar.xml
@@ -2,80 +2,122 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@drawable/shape_rect">
+    android:padding="16dp">
 
-    <EditText
-        android:id="@+id/fullname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Nama Lengkap"
-        android:inputType="textPersonName" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:layout_marginTop="8dp"
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/fullname"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <EditText
-        android:layout_marginTop="8dp"
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/email"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword" />
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="Nama lengkap" />
 
-    <EditText
-        android:layout_marginTop="8dp"
-        android:id="@+id/repassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/password"
-        android:ems="10"
-        android:hint="Ulangi Password"
-        android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/fullname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/submit"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView13"
+                android:ems="10"
+                android:inputType="textPersonName" />
 
-    <EditText
-        android:layout_marginTop="8dp"
-        android:id="@+id/telpon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/repassword"
-        android:ems="10"
-        android:hint="Nomor Telpon"
-        android:inputType="phone" />
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/fullname"
+                android:layout_marginTop="8dp"
+                android:text="Email" />
 
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/submit"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/telpon"
-        android:height="30dp"
-        android:background="@drawable/button_rect"
-        android:text="DAFTAR"
-        android:textColor="@color/white" />
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/fullname"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView14"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
 
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/email"
+                android:layout_marginTop="8dp"
+                android:text="Password" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/email"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView15"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/password"
+                android:layout_marginTop="8dp"
+                android:text="Ulangi password" />
+
+            <EditText
+                android:id="@+id/repassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/password"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView16"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/repassword"
+                android:layout_marginTop="8dp"
+                android:text="Nomor HP" />
+
+            <EditText
+                android:id="@+id/telpon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/repassword"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView17"
+                android:ems="10"
+                android:inputType="phone" />
+
+            <Button
+                android:id="@+id/submit"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/telpon"
+                android:layout_marginTop="20dp"
+                android:height="30dp"
+                android:background="@drawable/button_rect"
+                android:text="Daftar"
+                android:textColor="@color/white" />
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
