--- a/app/src/main/res/layout/popup_login.xml
+++ b/app/src/main/res/layout/popup_login.xml
@@ -2,43 +2,57 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/shape_rect"
-    android:layout_marginTop="20dp"
-    >
+    android:padding="16dp">
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Email"
+        android:textStyle="bold" />
 
     <EditText
-        android:layout_marginTop="8dp"
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView11"
         android:ems="10"
-        android:inputType="textEmailAddress"
-        android:hint="Email" />
+        android:inputType="textEmailAddress" />
 
     <EditText
-        android:layout_marginTop="8dp"
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/submit"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView12"
         android:ems="10"
-        android:inputType="textPassword"
-        android:layout_below="@+id/email"
-        android:hint="Password" />
+        android:inputType="textPassword" />
 
     <Button
-        android:layout_marginTop="8dp"
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/password"
+        android:layout_marginTop="8dp"
         android:background="@drawable/button_rect"
-        android:text="MASUK"
+        android:text="Masuk"
         android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/email"
+        android:layout_marginTop="8dp"
+        android:text="Password"
+        android:textStyle="bold" />
 
 </RelativeLayout>
