--- a/app/src/main/res/layout/n_home_listrowview.xml
+++ b/app/src/main/res/layout/n_home_listrowview.xml
@@ -18,7 +18,8 @@
             android:id="@+id/img_cover"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/dummy_avatar" />
+            android:src="@drawable/dummy_avatar"
+            android:scaleType="centerCrop" />
     </RelativeLayout>
 
     <RelativeLayout
